--- a/metadata.yaml
+++ b/metadata.yaml
@@ -19,6 +19,8 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: 'Camping in the Canadian Rockies
 
   an account of camp life in the wilder parts of the Canadian
